# iron-file

./: Cargo.toml  README.md  flake.nix
config/: default.toml
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/gtk-frontend/: Cargo.toml
crates/gtk-frontend/src/: main.rs
crates/iced-frontend/: Cargo.toml  build.rs
crates/iced-frontend/src/: main.rs
proto/: file_browser.proto
src/: lib.rs  main.rs
