[package]
name = "iron-file-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fs2 = "0.4"
prost = "0.14"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
