[package]
name = "iron-file-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fs2 = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
iron-file-common = { path = "../common" }
prost = "0.14"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
zip = "0.6"
