[package]
name = "iron-file-gtk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gtk4 = "0.11"
hyper-util = { version = "0.1", features = ["tokio"] }
prost = "0.14"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
