[package]
name = "iron-file-iced"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hyper-util = { version = "0.1", features = ["tokio"] }
iced = { version = "0.13", features = ["tokio"] }
prost = "0.14"
tokio = { version = "1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"
