[package]
name = "iron-file-iced"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
iconflow = { version = "1", features = ["pack-lucide"] }
iron-file-common = { path = "../common" }
tokio = { version = "1", features = ["rt-multi-thread"] }
