[package]
name = "iron-file-iced"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
iced = { version = "0.13", features = ["image", "lazy", "svg", "tokio"] }
iconflow = { version = "1", features = ["pack-lucide"] }
iron-file-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
